# ttask

./: .gitignore  CLAUDE.md  Cargo.toml
.claude/skills/project-conventions/: SKILL.md
.github/workflows/: release.yml
src/: cli.rs  clock.rs  confirm.rs  editor.rs  form_editor.rs  format.rs  help_md.rs  history_tui.rs  lib.rs  main.rs  model.rs  screen.rs  yaml.rs
src/commands/: add.rs  clear.rs  complete.rs  delete.rs  edit.rs  history.rs  info.rs  list.rs  mod.rs  open.rs
src/store/: codec.rs  gc.rs  mod.rs  order.rs  revert.rs  tasks.rs  workdays.rs
src/time/: date.rs  duration.rs  mod.rs  parse_fields.rs
src/tui/: events.rs  mod.rs  pending.rs  render.rs
tests/: cli_add.rs  cli_clear.rs  cli_delete_complete.rs  cli_edit.rs  cli_help_md.rs  cli_history.rs  cli_info.rs  cli_list.rs  cli_open.rs  gc_timing.rs  parsing.rs  store_persistence.rs  tui_keys.rs
tests/support/: fake_editor_bin.rs  mod.rs
